# terminus2-v1.0.0

./: README.md  contract.yaml  pyproject.toml
src/terminus2/: cli.py  environment_local.py  model_patch.py  terminus_2.py
src/terminus2/agent/: context.py
src/terminus2/llms/: utils.py
src/terminus2/trajectories/: final_metrics.py  metrics.py  subagent_trajectory_ref.py  trajectory.py
tests/: test_atif_v16.py  test_atif_v17.py  test_cli_model_patch.py  test_environment_local.py  test_llm_utils.py  test_model_patch.py  test_terminus_query_result.py  test_trajectory_observations.py
